--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div id="hubspot-form"></div>
   </div>
 
-  <script charset="utf-8" type="text/javascript" src="//js-ap1.hsforms.net/forms/embed/v2.js"></script>
+  <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
     hbspt.forms.create({
       region: "ap1",
